--- a/diffeq/covid-19.ipynb
+++ b/diffeq/covid-19.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This is an experiment, working with COVID-19\n",
+    "# This is an experiment working on COVID-19\n",
     "1. differential equation\n",
     "2. parametric estimation\n",
     "3. load data from url\n",
