--- a/diffeq/covid-19.ipynb
+++ b/diffeq/covid-19.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,8 +67,20 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Precompiling DifferentialEquations [0c46a032-eb83-5123-abaf-570d42b7fbaa]\n",
+      "└ @ Base loading.jl:1273\n",
+      "┌ Info: Precompiling DiffEqParamEstim [1130ab10-4a5a-5621-a13d-e4788d82bd4c]\n",
       "└ @ Base loading.jl:1273\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(::sir_model{var\"###ParameterizedDiffEqFunction#445\",var\"###ParameterizedTGradFunction#446\",var\"###ParameterizedJacobianFunction#447\",Nothing,Nothing,ModelingToolkit.ODESystem}) (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
